# aardwolf

./: .dockerignore  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Hackers-Guide-to-Aardwolf  INSTALL.md  LICENSE  README-docker.md  README.md  ROADMAP.md  Rocket.toml  aardwolf.pot  build.rs  db-init.sh  diesel.toml  docker-compose.yml  docker-entrypoint.sh  docker-npm.sh  package-lock.json  package.json  rust-toolchain  translations  webpack.config.js
aardwolf-actix/: Cargo.toml
aardwolf-actix/src/: action.rs  db.rs  error.rs  lib.rs  routes.rs  session.rs  traits.rs  types.rs
aardwolf-actix/src/db/: get_user_by_id.rs  mod.rs  perform_db_action.rs
aardwolf-actix/src/routes/: app.rs  auth.rs  mod.rs  personas.rs  posts.rs
aardwolf-actix/src/types/: actor.rs  app.rs  auth.rs  mod.rs  personas.rs  user.rs
aardwolf-models/: .env.sample  .gitignore  Cargo.toml
aardwolf-models/examples/: local_user_auth.rs
aardwolf-models/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154357_add_files/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154415_add_images/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154543_add_users/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154603_add_base_actors/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154616_add_base_posts/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154635_add_followers/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154659_add_personas/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154746_add_links/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154755_add_posts/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154811_add_media_posts/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154838_add_comments/: down.sql  up.sql
aardwolf-models/migrations/2018-04-04-154903_add_reactions/: down.sql  up.sql
aardwolf-models/migrations/2018-04-05-235333_add_emails/: down.sql  up.sql
aardwolf-models/migrations/2018-04-05-235511_add_email_to_users/: down.sql  up.sql
aardwolf-models/migrations/2018-04-06-221443_add_local_auth/: down.sql  up.sql
aardwolf-models/migrations/2018-04-07-001818_add_timers/: down.sql  up.sql
aardwolf-models/migrations/2018-04-07-001826_add_events/: down.sql  up.sql
aardwolf-models/migrations/2018-04-07-002440_add_event_notifications/: down.sql  up.sql
aardwolf-models/migrations/2018-04-07-211402_add_roles/: down.sql  up.sql
aardwolf-models/migrations/2018-04-07-211409_add_user_roles/: down.sql  up.sql
aardwolf-models/migrations/2018-04-07-212221_add_permissions/: down.sql  up.sql
aardwolf-models/migrations/2018-04-07-212434_add_role_permissions/: down.sql  up.sql
aardwolf-models/migrations/2018-04-08-214834_add_follow_requests/: down.sql  up.sql
aardwolf-models/migrations/2018-04-14-012342_add_direct_posts/: down.sql  up.sql
aardwolf-models/migrations/2018-04-14-012357_add_groups/: down.sql  up.sql
aardwolf-models/migrations/2018-04-14-012407_add_group_base_actors/: down.sql  up.sql
aardwolf-models/migrations/2018-04-18-010722_add_delete_switch_persona_permissions/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004259_make_emails_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004310_make_shortnames_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004437_make_base_actor_urls_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004542_make_permissions_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004549_make_roles_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004642_make_file_path_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004702_make_follow_relation_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004711_make_group_relation_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004753_make_image_file_id_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004826_make_local_auth_user_id_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004903_make_post_base_post_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004943_make_role_permission_relations_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-004953_make_user_role_relations_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-005022_make_user_primary_email_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-005122_make_comments_post_unique/: down.sql  up.sql
aardwolf-models/migrations/2018-04-20-010016_make_follow_requests_unique/: down.sql  up.sql
aardwolf-models/migrations/2019-01-12-200751_remove_json_stores/: down.sql  (+1 more)
aardwolf-models/src/: base_actor.rs  base_post.rs  generate_urls.rs  lib.rs  link.rs  schema.rs  sql_types.rs  test_helper.rs  timer.rs
aardwolf-rocket/: Cargo.toml
aardwolf-rocket/src/: action.rs  lib.rs  response_or_redirect.rs  session.rs
aardwolf-server/: .gitignore  Cargo.toml  build.rs
aardwolf-server/lang/: pl.toml
aardwolf-server/templates/: http_error.html  sign_up.html.hbs
aardwolf-templates/: .gitignore  Cargo.toml  build.rs
aardwolf-templates/compiled_templates/: doh!  templates.rs
aardwolf-templates/src/: first_login.rs  home.rs  lib.rs  sign_in.rs  sign_up.rs
aardwolf-templates/templates/: SAMPLE-LAYOUT.md  base.rs.html  first_login.rs.html  footer.rs.html  head.rs.html  home.rs.html  html_head.rs.html  new_post.rs.html  settings.rs.html  shortcuts.rs.html  sign_in-v2-rs.html  sign_in.html  sign_in.rs.html  sign_up.html  sign_up.rs.html
aardwolf-types/: Cargo.toml
aardwolf-types/src/: apps.rs  error.rs  lib.rs  operations.rs  scope.rs  traits.rs  user.rs  wrapper.rs
aardwolf-yew/: Cargo.toml  index.html
aardwolf-yew-frontend/: Cargo.toml  index.html
aardwolf-yew-frontend/src/: lib.rs  main.rs  templates.rs
aardwolf-yew/src/: lib.rs  main.rs  templates.rs
rocket_i18n/: Cargo.toml  LICENSE  README.md
rocket_i18n/src/: lib.rs
(+663 files in other folders)
