[package]
name = "aardwolf"
version = "0.1.0"
authors = ["Eric Chadbourne <sillystring@protonmail.com>", "Elijah Mark Anderson <kd0bpv@gmail.com>", "Paul Woolcock <paul@woolcock.us>", "asonix <asonix@asonix.dog>"]
description = "Powering connected social communities with free software."
edition = "2018"

[workspace]
members = [
    "aardwolf-actix",
    "aardwolf-models",
    "aardwolf-templates",
    "aardwolf-test-helpers",
    "aardwolf-types",
]

[features]
default = ["simple-logging", "actix"]
actix = ["aardwolf-actix"]

[dependencies]
config = "0.9.0"
failure = "0.1"
log = "0.4"
yaml-rust = "0.3"
# Use simple log files or stdout/stderr. Conflicts with use-systemd and
# log-* features.
simple-logging = { version = "2.0", optional = true }
# Use syslog for writing logs. Conflicts with use-systemd and log-* features.
syslog = { version = "4.0", optional = true }
# Integrate with Systemd, includes Journald for logging. Conflicts with log-*
# features.
systemd = { version = "0.4", optional = true }

[dependencies.aardwolf-actix]
version = "0.1"
path = "aardwolf-actix"
optional = true

[dependencies.clap]
version = "2.29"
features = ["yaml"]
