[package]
name = "aardwolf"
version = "0.1.0"
authors = ["Eric Chadbourne <sillystring@protonmail.com>", "Elijah Mark Anderson <kd0bpv@gmail.com>", "Paul Woolcock <paul@woolcock.us>", "asonix <asonix@asonix.dog>"]
description = "Powering connected social communities with free software."
edition = "2021"

[workspace]
members = [
    "aardwolf-actix",
    "aardwolf-models",
    "aardwolf-templates",
    "aardwolf-test-helpers",
    "aardwolf-types",
    "aardwolf-yew-frontend",
]

[features]
default = ["simple-logging", "actix"]
actix = ["aardwolf-actix"]

[dependencies]
anyhow = "1.0"
clap = "4.3"
clap-verbosity-flag = "2.0"
thiserror = "1.0"
log = "0.4"
# Use simple log files or stdout/stderr. Conflicts with use-systemd and
# log-* features.
simple-logging = { version = "~2.0", optional = true }
# Use syslog for writing logs. Conflicts with use-systemd and log-* features.
syslog = { version = "6.1.0", optional = true }
# Integrate with Systemd, includes Journald for logging. Conflicts with log-*
# features.
systemd = { version = "0.10.0", optional = true }

[dependencies.aardwolf-actix]
version = "0.1"
path = "aardwolf-actix"
optional = true

[dependencies.config]
version = "0.13"