[package]
name = "aardwolf"
version = "0.1.0"
authors = ["Banjo Fox <drbanjofox@protonmail.com>","Elijah Mark Anderson <kd0bpv@gmail.com>", "Paul Woolcock <paul@woolcock.us>", "asonix <asonix@asonix.dog>"]
description = "Powering connected social communities with free software."
edition = "2021"

[workspace]
members = [
    "aardwolf-actix",
    "aardwolf-localization",
    "aardwolf-models",
    "aardwolf-templates",
    "aardwolf-test-helpers",
    "aardwolf-types",
    "aardwolf-yew-frontend"
]

[features]
default = ["simple-logging", "actix"]
actix = ["aardwolf-actix"]

[dependencies]
anyhow = "1.0"
clap = "4.3"
clap-verbosity-flag = "2.0"
thiserror = "1.0"
log = "0.4"
# Use simple log files or stdout/stderr. Conflicts with use-systemd and
# log-* features.
simple-logging = { version = "~2.0", optional = true }
# Use syslog for writing logs. Conflicts with use-systemd and log-* features.
syslog = { version = "6.1.0", optional = true }
# Integrate with Systemd, includes Journald for logging. Conflicts with log-*
# features.
systemd = { version = "0.10.0", optional = true }

# Locale crate - Putting it here fixes "cannot find function `_rust_i18n_translate` in the crate root"
rust-i18n = "2.1.0" # https://crates.io/crates/rust-i18n

[dependencies.aardwolf-actix]
version = "0.1"
path = "aardwolf-actix"
optional = true

[dependencies.config]
version = "0.13"