[package]
name = "aardwolf-actix"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2018"

[dependencies]
actix = "0.12"
actix-files = "0.6"
actix-http = "3.3"
actix-web = "4.3"
config = "0.9"
thiserror = "1.0"
log = "0.4"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = "1.3"

[dependencies.aardwolf-models]
version = "0.1"
path = "../aardwolf-models"

[dependencies.aardwolf-templates]
version = "0.1"
path = "../aardwolf-templates"

[dependencies.aardwolf-types]
version = "0.1"
path = "../aardwolf-types"

[dependencies.actix-session]
version = "0.7"
features = ["cookie-session"]

[dependencies.diesel]
version = "2.1"
default-features = false
features = ["postgres", "uuid", "chrono"]

[dependencies.rocket_i18n]
rocket_i18n = "0.4"
default-features = false
features = ["actix-web"]

[dependencies.futures]
version = "0.3"
features = ["compat"]