[package]
name = "aardwolf-models"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
description = "Database interaction for the Aardwolf project"
edition = "2018"

[dependencies]
bcrypt = "0.2"
chrono = "0.4"
chrono-tz = "0.5"
failure = "0.1"
log = "0.4"
mime = "0.3"
openssl = "0.10"
rand = "0.6"
serde = "1.0"
serde_json = "1.0"
url = "1.7"
[dependencies.uuid]
version = "0.6"
features = ["v4"]

[features]
default = []
test = ["dotenv"]

[dependencies.dotenv]
version = "0.13"
optional = true

[dependencies.diesel]
version = "1.4"
features = ["chrono", "postgres", "serde_json", "uuid"]

[dev-dependencies]
env_logger = "0.6"
serde_derive = "1.0"
