[package]
name = "aardwolf-models"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
description = "Database interaction for the Aardwolf project"
edition = "2018"

[dependencies]
bcrypt = "0.14"
chrono = "0.4"
chrono-tz = "0.8"
failure = "0.1"
log = "0.4"
mime = "0.3"
openssl = "0.10"
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
url = "2.1"
dotenv="0.14"

[dependencies.uuid]
version = "1.3"
features = ["v4"]

[features]
default = []
test = []

[dependencies.diesel]
version = "2.1"
features = ["chrono", "postgres", "serde_json", "uuid"]

[dev-dependencies]
env_logger = "0.6"
serde_derive = "1.0"