[package]
name = "aardwolf-models"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
description = "Database interaction for the Aardwolf project"
edition = "2021"

[dependencies]
anyhow = "1.0"
bcrypt = "0.15.0"
chrono = "0.4.26"
chrono-tz = "0.9.0"
log = "0.4"
mime = "0.3"
openssl = "0.10"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0"
url = "2.1"
dotenvy ="0.15"


[dependencies.uuid]
version = "1.3"
features = ["v4"]

[features]
default = []
test = []

[dependencies.diesel]
version = "2.1"
features = ["chrono", "postgres", "serde_json", "uuid"]

[dev-dependencies]
env_logger = "0.11.3"
serde_derive = "1.0"