[package]
name = "aardwolf"
version = "0.1.0"
authors = ["Eric Chadbourne <sillystring@protonmail.com>", "Elijah Mark Anderson <kd0bpv@gmail.com>", "Paul Woolcock <paul@woolcock.us>", "Asonix <asonix.dev@gmail.com>"]
description = "Powering connected social communities with free software."

[lib]
name = "_aardwolf"
path = "src/aardwolf/lib.rs"

[[bin]]
name = "aardwolf-server"
path = "src/bin/main.rs"

[[bin]]
name = "setup"
path = "src/bin/setup.rs"

[dependencies]
bs58 = "0.2"
bcrypt = "0.2"
collection_macros = "0.2.0"
derive_builder = "0.5.0"
failure = "0.1.1"
r2d2 = "0.8"
r2d2-diesel = "1.0"
ring = "0.11"
rocket = "=0.3.8"
rocket_codegen = "=0.3.8"
serde = "1.0.21"
serde_derive = "1.0.21"
config = "0.8.0"
clap = {version = "2.29", features = ["yaml"]}
yaml-rust = "0.3.5"

[dependencies.aardwolf-models]
version = "0.1"
path = "../aardwolf-models"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "0.6"
features = ["v4"]

[dependencies.diesel]
version = "1.1"
default-features = false
features = ["postgres", "uuid", "chrono"]

[dependencies.rocket_contrib]
version = "=0.3.8"
default-features = false
features = ["handlebars_templates", "json"]
