[package]
name = "aardwolf-templates"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
config = "0.9.0"
ructe = { version = "0.9.0", features = "sass" }

[dependencies]
gettext = "0.4"
gettext-macros = { git = "https://github.com/Plume-org/gettext-macros/", rev = "a7c605f7edd6bfbfbfe7778026bfefd88d82db10" }
gettext-utils = { git = "https://github.com/Plume-org/gettext-macros/", rev = "a7c605f7edd6bfbfbfe7778026bfefd88d82db10" }

[dependencies.rocket_i18n]
version = "0.4"
git = "https://github.com/Plume-org/rocket_i18n"
rev = "3eca920593b41d3232aec702733f5c91da8ec808"

[dependencies.aardwolf-types]
version = "0.1"
path = "../aardwolf-types"

[dependencies.aardwolf-models]
version = "0.1"
path = "../aardwolf-models"
