[package]
name = "aardwolf-templates"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
config = "0.13"
ructe = "0.13"

[dependencies]
gettext = "0.4"
gettext-macros = "0.6.1"
gettext-utils = "0.1.0"

[dependencies.rocket_i18n]
rocket_i18n = "0.4"
default-features = false
features = ["actix-web"]

[dependencies.aardwolf-types]
version = "0.1"
path = "../aardwolf-types"

[dependencies.aardwolf-models]
version = "0.1"
path = "../aardwolf-models"

[dev-dependencies]
ructe = "0.16"