[package]
name = "aardwolf-templates"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
config = "0.14.0"
ructe = "0.13"

[dependencies]
gettext = "0.4"
gettext-macros = "0.6.1"
gettext-utils = "0.1.0"

[dependencies.rocket_i18n]
version = "0.4.1"
default-features = false

[dependencies.aardwolf-types]
version = "0.1"
path = "../aardwolf-types"

[dependencies.aardwolf-models]
version = "0.1"
path = "../aardwolf-models"

#- 
# Start of Yew Migration?
[dependencies.aardwolf-yew-frontend]
version = "0.1.0"
path = "../aardwolf-yew-frontend"