[package]
name = "aardwolf-types"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2018"

[features]
default = []

[dependencies]
derive_builder = "0.7.0"
failure = "0.1"
log = "0.4"
openssl = "0.10"
mime = "0.3"
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = "1.0"
serde_derive = "1.0"
url = "2.1"
url_serde = "0.2"

[dependencies.aardwolf-models]
version = "0.1"
path = "../aardwolf-models"

[dependencies.diesel]
version = "1.4"
default-features = false
features = ["postgres", "uuid", "chrono"]

[dev-dependencies]
aardwolf-test-helpers = { version = "0.1", path = "../aardwolf-test-helpers" }
