[package]
name = "aardwolf-yew-frontend"
version = "0.1.0"
authors = ["Banjo Fox <drbanjofox@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"]}
yew-router = "0.17.0"
wasm-bindgen = "0.2.87" # Easy support for interacting between JS and Rust.
log = {version = "0.4.6", features = ["std", "serde"]} # Also used by main app for logging
wasm-logger = "0.2.0" # Using this instead of Gloo because we already use log
serde = "1.0.164"
serde_json = "1.0.102"
ybc = "0.4.0" # YewBulmaCrate? - https://crates.io/crates/ybc

# Locale crate
rust-i18n = "2.1.0" # https://crates.io/crates/rust-i18n
