[package]
authors = ["Baptiste Gelez <baptiste@gelez.xyz>"]
description = "Rocket fairing for easy internationalization with gettext"
license = "GPL-3.0"
name = "rocket_i18n"
readme = "README.md"
repository = "https://github.com/Aardwolf-Social/rocket_i18n"
keywords = ["i18n", "rocket", "gettext", "internationalization", "localization"]
categories = ["internationalization", "localization", "web-programming"]
version = "0.1.1"

[dependencies]
gettext = "0.3.0"
rocket = "0.4.0-rc.1"
serde_json = "1.0"
tera = "0.11"

[dev-dependencies.rocket_contrib]
features = ["tera_templates"]
version = "0.4.0-rc.1"
